--- a/config.yaml
+++ b/config.yaml
@@ -5,6 +5,10 @@ DATASET:
     TIMESTAMPS : './seq/2011_09_30_drive_0018_sync/timestamps.txt'
     ODOM_PATH : './seq/2011_09_30_drive_0018_sync/05.txt'
     MAX_VEL: 1.5
+    MASK_POINTS: 20.0
+    MAX_DEPTH: 50.0
+    MIN_DEPTH: 1.0
+    MAX_IOU: 0.80
     TRANSFORMS:
       Velo2cam : [[7.533745e-03, -9.999714e-01, -6.166020e-04, -4.069766e-03], 
                   [1.480249e-02,  7.280733e-04, -9.998902e-01, -7.631618e-02], 
@@ -22,6 +26,10 @@ DATASET:
     DEPTH_PATH : './seq/rgbd_dataset_freiburg3_walking_rpy/depth'
     ODOM_PATH :  './seq/rgbd_dataset_freiburg3_walking_rpy/groundtruth'
     MAX_VEL: 0.1
+    MASK_POINTS: 20.0
+    MAX_DEPTH: 50.0
+    MIN_DEPTH: 0.0
+    MAX_IOU: 0.80
     DEPTH_FACTOR: 5000.0
 
     CAMERA:
@@ -55,7 +63,4 @@ CLASSES:
   NON_RIGID: ['person', 'bird', 'cat', 'dog', 'horse']
 
 SAVE_MASK : True
-USE_CUDA : True
-MASK_POINTS: 20.0
-MAX_DEPTH: 50.0
-MAX_IOU: 0.85
+USE_CUDA  : True
