--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 DATASET:
-  NAME : 'kitti'
+  NAME : 'tum'
   KITTI: 
     SEQUENCE_NAME: '2011_09_30_drive_0018_sync'
     DATA_PATH  : './seq/2011_09_30_drive_0018_sync/image_02/data/'
@@ -23,10 +23,10 @@ DATASET:
       optical_center_y : 1.728540e+02
 
   TUM: 
-    SEQUENCE_NAME: 'rgbd_dataset_freiburg3_walking_static'
-    RGB_PATH   : './seq/rgbd_dataset_freiburg3_walking_static/rgb'
-    DEPTH_PATH : './seq/rgbd_dataset_freiburg3_walking_static/depth'
-    ODOM_PATH  : './seq/rgbd_dataset_freiburg3_walking_static/groundtruth'
+    SEQUENCE_NAME: 'rgbd_dataset_freiburg3_walking_rpy'
+    RGB_PATH   : './seq/rgbd_dataset_freiburg3_walking_rpy/rgb'
+    DEPTH_PATH : './seq/rgbd_dataset_freiburg3_walking_rpy/depth'
+    ODOM_PATH  : './seq/rgbd_dataset_freiburg3_walking_rpy/groundtruth'
     
     MAX_VEL: 0.1
     MASK_POINTS: 20.0
